[project]
name = "budget-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.11.1",
    "django==5.2.12",
    "django-cors-headers==4.9.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-yasg==1.21.15",
    "inflection==0.5.1",
    "packaging==26.0",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "sqlparse==0.5.3",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
]
